changed how reports are fetched, now fetched through acocunt id
