# src/controllers/scale.js
@@ -69,7 +69,7 @@ class ScaleController {
         return;
       }
       let responseObj = await scaleService.report(
-        req.tokenInfo[constants.ACCOUNT_ID]
+        req.params["account_id"]
       );
       res.status(responseObj.status_code).json(responseObj);
     } catch (err) {
